# rick-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
neural_network/: W1  W2  b1  b2  config.py  machine_learning.py  neural network.py  neural_network.py
