[tool.poetry]
name = "rick-analysis"
version = "0.1.0"
description = ""
authors = ["mikhail <uvarov.mikhail.i@gmail.com>"]
packages = [
	{ include = "neural_network" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
